feat: Introduce structured deployment for monitoring services, relocating configurations and adding new infrastructure tooling.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,44 +15,7 @@ services:
       - microservice-net
     restart: unless-stopped
 
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus
-    networks:
-      - microservice-net
-    restart: unless-stopped
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
-    ports:
-      - "3001:3000"
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_AUTH_ANONYMOUS_ENABLED=true
-      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./monitoring/grafana/datasources:/etc/grafana/provisioning/datasources
-      - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards
-    networks:
-      - microservice-net
-    depends_on:
-      - prometheus
-    restart: unless-stopped
-
-volumes:
-  grafana_data:
-    name: microservice-grafana-data
-  prometheus_data:
-    name: microservice-prometheus-data
-
 networks:
   microservice-net:
+    name: microservice-network
     driver: bridge
