feat: Add configurable server read, write, and idle timeouts and update test logger level.

--- a/config/config.production.yaml
+++ b/config/config.production.yaml
@@ -1,5 +1,10 @@
 app:
   name: "User-Service"
 
+server:
+  read_timeout: "5s"
+  write_timeout: "10s"
+  idle_timeout: "120s"
+
 logger:
   level: "info"
