feat: Implement domain driven design

--- a/config/config.production.yaml
+++ b/config/config.production.yaml
@@ -8,3 +8,10 @@ server:
 
 logger:
   level: "info"
+
+database:
+  driver: "couchbase"
+  host: "couchbase"
+  bucket: "default"
+  username: "Administrator"
+  password: "123456"
