--- a/config/config.development.yaml
+++ b/config/config.development.yaml
@@ -8,3 +8,10 @@ server:
 
 logger:
   level: "debug"
+
+database:
+  driver: "memory"
+  host: "couchbase"
+  bucket: "default"
+  username: "Administrator"
+  password: "123456"
