--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       dockerfile: Dockerfile
       args:
         VERSION: "${VERSION}"
+        FRAMEWORK: "${APP_FRAMEWORK}"
     ports:
       - "${APP_PORT}:${APP_PORT}"
     environment:
