--- a/deploy/monitoring/prometheus/prometheus.yml
+++ b/deploy/monitoring/prometheus/prometheus.yml
@@ -6,7 +6,7 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
 
-  - job_name: "user-service"
+  - job_name: "microservice"
     metrics_path: "/metrics"
     static_configs:
-      - targets: ["user-service:3000"]
+      - targets: ["microservice:3000"]
