chore: Update Jaeger image to version 2.15.1.

--- a/deploy/docker-compose.infra.yml
+++ b/deploy/docker-compose.infra.yml
@@ -28,7 +28,7 @@ services:
     restart: unless-stopped
 
   jaeger:
-    image: jaegertracing/all-in-one:latest
+    image: jaegertracing/jaeger:2.15.1
     container_name: jaeger
     environment:
       - COLLECTOR_OTLP_ENABLED=true
