--- a/config/config.development.yaml
+++ b/config/config.development.yaml
@@ -16,7 +16,7 @@ database:
   host: "couchbase"
   bucket: "microservice-bucket"
   username: "admin"
-  password: "password"
+  password: "Admin123."
 
 trace:
   exporter: "jaeger"
