--- a/config/config.test.yaml
+++ b/config/config.test.yaml
@@ -1,6 +1,6 @@
 app:
   name: "Microservice"
-  port: "3001"
+  port: "3000"
   env: "test"
 
 server:
@@ -19,5 +19,5 @@ database:
   password: ""
 
 trace:
-  exporter: "noop"
-  endpoint: ""
+  exporter: "jaeger"
+  endpoint: "http://localhost:4318"
